# COHERENT

./: .gitignore  README.md  README_PRO.md  __init__.py  debug_priority.py  pyproject.toml  reproduce_calculus_rules.py  reproduce_pending_bounds.py  reproduce_power_rule_error.py  reproduce_rendering_v2.py  reproduce_scenario_log.py  reproduce_unknown_error.py  requirements.txt  sitecustomize.py  verify_rules.py
brain_memory/: chroma.sqlite3
coherent/: __init__.py
core/: classifier.py  computation_engine.py  core_runtime.py  evaluator.py  input_parser.py  knowledge_registry.py  parser.py  renderers.py  symbolic_engine.py
docs/: COHERENT_Language_Processing_Design.md  CRS_Memory_Library_Spec_v0_1.md  CausalScript_DSL_Specification.md  DIRECTORY_STRUCTURE.md  Development_Status_Report_20251220.md  Math_Curriculum_Test_Items.md  NL_Parsing_Test_Cases.md  Supported_Math_Knowledge.md  category_aware_optimization_spec.md  causal_decision_theory_spec.md  task_management_sheet_v2.2.md
examples/: nlp_demo.py
report/: D-1_FIX_HISTORY.md  D-1_REPORT.json  D-2_REPORT.json  PHASE0_LOG.json  PHASE0_REPORT.md  PHASE_A_LOG.json  PHASE_A_REPORT.md  PHASE_B_LOG.json  PHASE_B_REPORT.md  PHASE_C5_LOG.json  PHASE_C5_REPORT.md  PHASE_C_LOG.json  PHASE_C_REPORT.md
scripts/: tune_temperature.py  verify_brain_v2.py  verify_refactoring.py
tests/: reproduce_partial.py  test_arithmetic_engine.py  test_calculus_rules.py  test_category_rendering.py  test_causal_decision.py  test_causal_decision.py.bak  test_causal_engine_heuristics.py  test_context_manager.py  test_curriculum_coverage.py  (+39 more)
(+901 files in other folders)
