[project]
name = "coherent-ai"
version = "0.1.0"
description = "Optical Interference Calculation & Causal Intelligence System"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sympy>=1.13",
    "lark-parser>=0.12",
    "streamlit>=1.38",
    "jupyter>=1.0",
    "pytest>=8.4.2",
    "PyYAML>=6.0",
    "graphviz>=0.21",
    "sentence-transformers>=5.2.0",
    "chromadb>=1.3.7",
    "torch>=2.0.0",
    "numpy>=2.3.4",
    "matplotlib>=3.10.8",
    "pillow>=12.0.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "opencv-python>=4.8.0",
]
[project.scripts]
coherent = "coherent.cli.main:main"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
filterwarnings = [
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]

[tool.setuptools]
packages = ["coherent"]
